--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,7 +1,6 @@
 # Dependencies
 /frontend/node_modules
 /backend/node_modules
-/node_modules
 
 # Build artifacts
 /frontend/build
@@ -23,7 +22,10 @@ yarn-debug.log*
 yarn-error.log*
 
 # Environment variables
-.env.local
+.env
+.env.*
+!.env.example
+*.env.local
 .env.development.local
 .env.test.local
 .env.production.local 
