--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   backend:
     build:
@@ -20,6 +18,7 @@ services:
     volumes:
       - ./backend:/usr/src/app
       - /usr/src/app/node_modules # 排除 node_modules 以使用容器内的依赖
+    command: npm run start:dev
 
   mysql:
     image: mysql:8.0
